# Arca-RAVEN

./: .gitignore  README.md  instructions.md
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.css  App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/layout/: Header.tsx
app/src/components/mission/: MissionPanel.tsx
app/src/components/sensors/: LidarViz.tsx  SensorPanel.tsx
app/src/components/telemetry/: TelemetryPanel.tsx
app/src/hooks/: useWebSocket.ts
app/src/store/: roverStore.ts
app/src/types/: rover.ts
bridge/: mock_sim.py  requirements.txt  server.py  settings.py  websocket_manager.py
configs/rovers/: rocker_bogie.yaml  simple_wheeled.yaml
configs/sensors/: lidar_presets.yaml
configs/terrain/: asteroid.yaml  earth_offroad.yaml  mars.yaml  moon.yaml
configs/training/: sac_config.yaml
deployment/: README.md
docs/: architecture.md  windows-test-flow.md
models/: README.md
rovers/: README.md
scripts/: setup.sh
simulation/: __init__.py  requirements.txt
simulation/api/: server.py  websocket_manager.py
simulation/core/: catalog.py  isaac_sim_manager.py  simulation_interface.py
simulation/environments/: __init__.py
simulation/rl/environments/: rover_env.py
simulation/rl/rewards/: composite_reward.py
terrain/: README.md
training/: __init__.py
training/configs/: default.yaml
training/curriculum/: __init__.py
training/environments/: __init__.py
training/rewards/: __init__.py
(+2 files in other folders)
