[package]
name = "arca-raven"
version = "0.1.0"
description = "Arca RAVEN — Autonomous Planetary Rover Training Platform"
authors = []
edition = "2021"

[lib]
name = "arca_raven_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
